fix: reduce font size for location text for better alignment

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -538,7 +538,7 @@ input:checked + .slider:before {
 .location-text {
     font-family: Arial, sans-serif;
     color: #555;
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 600;
   }
 
